--- a/src/components/Content/Login/Login.module.scss
+++ b/src/components/Content/Login/Login.module.scss
@@ -35,7 +35,6 @@
       height: 58%;
       border: none;
       width: 91%;
-      
 
       .inputBlock {
         display: flex;
@@ -198,6 +197,9 @@
           height: 20px;
           cursor: pointer;
         }
+      }
+      .errorInput {
+       color: red;
       }
       .submit {
         width: 80%;
@@ -565,12 +567,11 @@
         .inputBlock {
           .loginMenu {
             top: 47.5%;
-            }
           }
-          .loginMenuNone {
-            top: 47.5%;
         }
-    
+        .loginMenuNone {
+          top: 47.5%;
+        }
       }
     }
   }
@@ -584,12 +585,11 @@
         .inputBlock {
           .loginMenu {
             top: 47%;
-            }
           }
-          .loginMenuNone {
-            top: 47%;
         }
-    
+        .loginMenuNone {
+          top: 47%;
+        }
       }
     }
   }
