--- a/src/components/Content/Registration/Registration.module.scss
+++ b/src/components/Content/Registration/Registration.module.scss
@@ -4,6 +4,8 @@
   align-items: center;
   width: 100%;
   min-height: 70vh;
+  background-color: #fff;
+  border-radius: 20px;
   img {
     width: 20%;
   }
@@ -34,12 +36,13 @@
       align-items: center;
       height: 58%;
       border: none;
-       width: 80%;
+      width: 90%;
       .inputBlock {
         display: flex;
+        justify-content: center;
         align-items: center;
         border-radius: 8px;
-        width: 80%;
+        width: 81%;
         padding: 6px;
         border: solid 1px;
         background-color: #fff;
@@ -59,42 +62,37 @@
             height: 0;
           }
         }
-       .passwordError {
-        display: flex;
-        align-items: center;
-        border-radius: 8px;
-        width: 80%;
-        padding: 6px;
-        background-color: #fff;
-        border: solid 1px red;
-        
-       }
-      
-       .inputSpanNoEye {
-        display: block;
-        background-image: url("../../../logo/symbol_icon-icons.com_57844.png");
-        background-size: 20px 20px;
-        background-repeat: no-repeat;
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-      }
-      .inputSpanEye {
-        display: block;
-        background-image: url("../../../logo/slash-on-it_icon-icons.com_57783.png");
-        background-size: 20px 20px;
-        background-repeat: no-repeat;
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-      }
-      }
 
+        .inputSpanNoEye {
+          display: block;
+          background-image: url("../../../logo/symbol_icon-icons.com_57844.png");
+          background-size: 20px 20px;
+          background-repeat: no-repeat;
+          width: 20px;
+          height: 20px;
+          cursor: pointer;
+        }
+
+        .inputSpanEye {
+          display: block;
+          background-image: url("../../../logo/slash-on-it_icon-icons.com_57783.png");
+          background-size: 20px 20px;
+          background-repeat: no-repeat;
+          width: 20px;
+          height: 20px;
+          cursor: pointer;
+        }
+      }
+      .inputCodeStyle {
+        display: flex;
+        justify-content: center;
+      }
+     
       .inputBlockNone {
         display: none;
       }
       .submit {
-        width: 80%;
+        width: 81%;
         padding: 8px;
         border-radius: 8px;
         cursor: pointer;
@@ -111,7 +109,7 @@
         justify-content: space-between;
         text-decoration: none;
         color: black;
-        font-size: 1.2vw;
+        font-size: 1vw;
         &:hover {
           color: #164f48;
         }
@@ -125,7 +123,7 @@
         }
       }
       .linkHome {
-        font-size: 1.2vw;
+        font-size: 1vw;
         text-decoration: none;
         color: black;
         &:hover {
