--- a/src/pages/ProductsPage/ProductsPage.module.scss
+++ b/src/pages/ProductsPage/ProductsPage.module.scss
@@ -1,10 +1,10 @@
-.mainPage {
+.productsPage {
   background-color: #fff;
   border-radius: 25px;
 }
 
 @media screen and (max-width: 1024px) {
-  .mainPage {
+  .productsPage {
     border-radius: 0;
   }
 }
