--- a/src/components/Layout/FixedMenu/FixedMenu.module.scss
+++ b/src/components/Layout/FixedMenu/FixedMenu.module.scss
@@ -5,171 +5,12 @@
   position: fixed;
   bottom: 0;
   background-color: #fff;
-  padding-top: 3px;
+  align-items: center;
+  padding: 8px;
 
-  .menuActive {
-    display: block;
-    left: 0;
-    position: fixed;
-    transform: translate(0%);
-    transition: 0.5s;
-    height: 100%;
-    width: 100%;
-    background-color: white;
-    top: 0;
-    z-index: 3;
-  }
-  .menuNone {
-    display: block;
-    left: 0;
-    top: 0;
-    position: fixed;
-    overflow-x: hidden;
-    height: 100%;
-    transform: translate(-100%);
-    transition: 0.5s;
-  }
-
-  .FixedMenuLinkHome {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/menuHome.png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-    }
-  }
-  .FixedMenuLinkHomeActive {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/menuHome.png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-      background-position-x: 100%;
-    }
-  }
-  .FixedMenuButtonMenu {
-    position: relative;
-    z-index: 4;
-    background-color: #fff;
-    border: none;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/menuButton.png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-    }
-  }
-  .FixedMenuButtonMenuActive {
-    position: relative;
-    z-index: 4;
-    background-color: #fff;
-    border: none;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/menuButton.png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-      background-position-x: 100%;
-    }
-  }
-  .FixedMenuLinkBasket {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/menuBasket (1).png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-    }
-  }
-  .FixedMenuLinkBasketActive {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/menuBasket (1).png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-      background-position-x: 100%;
-    }
-  }
-  .FixedMenuLinkSelected {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/favorite\ \(2\).png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-    }
-  }
-  .FixedMenuLinkSelectedActive {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/favorite\ \(2\).png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-      background-position-x: 100%;
-    }
-  }
-  .FixedMenuLinkPersonalAccount {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/menuPersonalOffice.png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-    }
-  }
-  .FixedMenuLinkPersonalAccountActive {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/menuPersonalOffice.png");
-      background-repeat: no-repeat;
-      background-size: 40px, 40px;
-      display: block;
-      width: 20px;
-      height: 20px;
-      background-position-x: 100%;
-    }
-  }
 }
+
+
 
 @media screen and (min-width: 1024px) {
   .FixedMenuContainer {
